# aufbau

./: .gitignore  404.html  ADVANCED_TYPE_CHECKING_REPORT.md  CONTEXT_DUMP.md  Cargo.toml  Cargo_ml.toml  Cargo_test.toml  ENHANCED_TYPE_SYSTEM_SUMMARY.md  GRAMMAR_TEST_REPORT.md  TYPE_FILTERING.md  ast.md  basic.html  binding.html  binding.md  book-831c6ebd.js  debug_type_test.rs  flake.nix  grammar.md  highlight-771e6289.css  implementation.html  index.html  intro.html  justfile  notes.md  out.txt  p7_debug_ast_fail.txt  package-lock.json  package.json  parsing.html  print.html  readme.md  searcher-c2a407aa.js  searchindex-08840cfa.js  searchindex-2a8142e8.js  searchindex-53698079.js  searchindex-eea25041.js  spec.html  toc-ea9c70a7.js  toc.html  tomorrow-night-a1977727.css  (+1 more)
.github/instructions/: relogic.instructions.md
.github/workflows/: deploy-docs.yml  validation.yml
concepts/: binding.html  theory.html  trees.html
docs/: ast.md  binding.md  challenges.md  grammar.md  partial.md
examples/: clike.spec  fun.spec  imp.auf  imp.spec  json.auf  repetition_demo.rs  simple_stlc.spec  simple_stlc_tests.txt  stlc.auf  stlc.spec  test.stlc  toy.spec  xtlc.spec
extra/aufbau-vscode-syntax/: CHANGELOG.md  INSTALL.md  LICENSE  README.md  package-lock.json  package.json
extra/vscode-p7-syntax/: CHANGELOG.md  INSTALL.md  README.md  example.spec  install.sh  language-configuration.json  p7-syntax-0.1.0.vsix  package.json
python/: Cargo.toml  README.md  flake.nix  pyproject.toml
python/examples/: demo.py  gpt2.py  phi.py  sample.py  test.py
python/proposition_7/: __init__.py  environment.py  grammars.py  llm.py  sampler.py
python/python/: __init__.py  grammars.py  sampler.py
python/src/: lib.rs
python/visualization/: README.md  start.sh
reports/: ENHANCED_TYPE_SYSTEM_SUMMARY.md  REFACTORING_SUMMARY.md
scripts/: remote_deploy.sh  remote_validate.sh  validate-ci.sh
spec/: book.toml
spec/preprocessor/: __main__.py  paths.py  proofs.py  status.py
spec/src/: SUMMARY.md  basic.md  implementation.md  intro.md  parsing.md  spec.md
spec/theme/: ayu-highlight.css  collapse-examples.js  index.hbs  status.css  uncertainty.css
src/: main.rs  mod.rs  regex.rs  test.rs  testing.rs  utils.rs
src/cli/: examine.rs  mod.rs
src/engine/: constraint.rs  mod.rs  rank.rs  regex.rs  synthesizer.rs  tests.rs
src/exp/: grammar.rs  mod.rs
src/logic/: advanced_type_tests.rs  ast.rs  debug.rs  debug_tests.rs  enhanced_features_tests.rs  focused_fail_tests.rs  mod.rs  parser.rs  (+8 more)
theme/: proofs-35a8b21d.css
(+166 files in other folders)
