[package]
name = "aufbau"
version = "0.1.0"
edition = "2024"
authors = ["pkd <pkd@unsuspicious.org>"]
description = "Type-aware constrained decoding for LLMs using context-dependent grammars with typing rules"
license = "MIT"
repository = "https://github.com/Unsuspicious-Industries/aufbau"
homepage = "https://unsuspicious.org/blog/proposition-7"
documentation = "https://docs.rs/aufbau"
readme = "readme.md"
keywords = ["llm", "constrained-decoding", "type-systems", "grammar", "parsing"]
categories = ["parsing", "text-processing", "development-tools"]
exclude = [
    "target/",
    ".venv/",
    "tmp/",
    "perf.data*",
    "test.perf",
    "flamegraph.svg",
    ".git/",
]

[lib]
path = "src/mod.rs"

[[bin]]
name = "aufbau"
path = "src/main.rs"


[dependencies]
regex = "1.10" # legacy should remove
bimap = "0.6.3"

clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rouille = "3.6.2"
anyhow = "1.0.100"

regex-syntax = "0.8.6"

# parallelization
rayon = "1.10"

# cache
moka = { version = "0.12", features = ["sync"] }
once_cell = "1.17.1"

# progress
indicatif = "0.17"

[dev-dependencies]
proptest = "1"
